# nntrainer

./: meson.build  meson_options.txt
jni/: meson.build  (+1 more)
nntrainer/tensor/: basic_planner.cpp  basic_planner.h  blas_avx.cpp  blas_avx.h  blas_interface.cpp  blas_interface.h  blas_neon.cpp  blas_neon.h  blas_neon_gemm_kernal.h  blas_neon_gemm_kernelv10.h  blas_neon_gemm_kernelv11.h  blas_neon_gemm_kernelv5.h  blas_neon_gemm_kernelv6.h  blas_neon_gemm_kernelv7.h  blas_neon_gemm_kernelv8.h  blas_neon_gemm_kernelv9.h  blas_neon_gemm_kernelv9_2.h  blas_neon_gemm_setting.h  char_tensor.cpp  float_tensor.cpp  half_tensor.cpp  manager.cpp  manager.h  memory_planner.h  memory_pool.cpp  memory_pool.h  meson.build  optimized_v1_planner.cpp  optimized_v1_planner.h  optimized_v2_planner.cpp  optimized_v2_planner.h  optimized_v3_planner.cpp  optimized_v3_planner.h  short_tensor.cpp  short_tensor.h  tensor.cpp  tensor.h  tensor_base.h  tensor_pool.cpp  tensor_pool.h  (+3 more)
nntrainer/tensor/cpu_backend/: cpu_backend.h  meson.build
nntrainer/tensor/cpu_backend/aarch64/: aarch64_compute_backend.cpp  aarch64_compute_backend.h  meson.build  neon_half.cpp  neon_half.h  neon_single.cpp  neon_single.h
nntrainer/tensor/cpu_backend/arm/: arm_compute_backend.cpp  arm_compute_backend.h  arm_compute_backend_fp16.cpp  armv7_neon.h  meson.build  neon_half.cpp  neon_half.h  neon_impl.cpp  neon_impl.h  neon_impl_fp16.cpp  neon_mathfun.h  neon_single.cpp  neon_single.h
nntrainer/tensor/cpu_backend/arm/gemm/: gemm_util.cpp  gemm_util.h  meson.build
nntrainer/tensor/cpu_backend/arm/matrix_transpose_neon/: matrix_transpose_kernels_neon.h  matrix_transpose_neon.cpp
nntrainer/tensor/cpu_backend/arm/uhgemm/: meson.build  uhgemm.cpp  uhgemm.h  uhgemm_common.h  uhgemm_noTrans.cpp  uhgemm_noTrans.h  uhgemm_pack.cpp  uhgemm_pack.h  uhgemm_transA.cpp  uhgemm_transA.h  uhgemm_transAB.cpp  uhgemm_transAB.h  uhgemm_transB.cpp  uhgemm_transB.h  uhgemm_util.cpp  uhgemm_util.h
nntrainer/tensor/cpu_backend/cblas_interface/: cblas_interface.h
nntrainer/tensor/cpu_backend/fallback/: fallback.cpp  fallback.h  fallback_fp16.cpp  fallback_internal.cpp  fallback_internal.h  fallback_internal_fp16.cpp  meson.build
nntrainer/tensor/cpu_backend/ggml_interface/: ggml_avx_macro.h  ggml_cpu_impl.cpp  ggml_impl.cpp  ggml_interface.cpp  ggml_interface.h  ggml_interface_bs_threadpool.cpp  meson.build
nntrainer/tensor/cpu_backend/sqnbitgemm_interface/: meson.build  mlas.h  mlas_q4.h  mlasi.h  mlasi_no_impl.cpp  mlasi_use.h  nntr_sqnbitgemm_threadpool.cpp  q4_dq.cpp  q4common.h  qgemm.cpp  qgemm.h  qgemm_kernel_default.cpp  quantize.cpp  sqnbitgemm.cpp  sqnbitgemm.h  sqnbitgemm_interface.cpp  sqnbitgemm_interface.h  sqnbitgemm_kernel_avx2.cpp  sqnbitgemm_kernel_avx2_int8_blklen32.h  sqnbitgemm_kernel_avx_common.h  sqnbitgemm_kernel_avx_common_int8.h  sqnbitgemm_platform.cpp  sqnbitgemm_q8_block.h  test_util.h  threading.cpp
nntrainer/tensor/cpu_backend/sqnbitgemm_interface/#tmp_mlas#/: q4gemm.cpp  q4gemm.h
nntrainer/tensor/cpu_backend/sqnbitgemm_interface/core/: meson.build
nntrainer/tensor/cpu_backend/x86/: avx2_impl.cpp  avx2_impl.h  avx2_impl_fp16.cpp  blas_avx.cpp  blas_avx.h  meson.build  x86_compute_backend.cpp  x86_compute_backend.h  x86_compute_backend_fp16.cpp
nntrainer/tensor/cpu_backend/x86_64/: blas_avx.cpp  meson.build  x86_64_compute_backend.cpp  x86_64_compute_backend.h
nntrainer/tensor/fbgemm/: ExecuteKernel.h  ExecuteKernelGeneric.h  Fbgemm.cc  Fbgemm.h  FbgemmFP16.cc  FbgemmFP16.h  FbgemmFP16UKernelsAvx2.cc  FbgemmFP16UKernelsAvx2.h  FbgemmFP16UKernelsAvx512.cc  FbgemmFP16UKernelsAvx512.h  FbgemmFP16UKernelsAvx512_256.cc  FbgemmFP16UKernelsAvx512_256.h  FbgemmFPCommon.h  FbgemmPackMatrixB.h  SimdUtils.h  TransposeUtils.cc  TransposeUtils.h  TransposeUtilsAvx2.h  Types.h  Utils.cc  Utils.h  UtilsAvx2.cc  UtilsAvx2.h  fbgemm_interface.cpp  fbgemm_interface.h  meson.build
nntrainer/tensor/hgemm/: hgemm.cpp  hgemm.h  hgemm_common.h  hgemm_kernel_4x8.h  hgemm_kernel_8x16.h  hgemm_kernel_8x24.h  hgemm_kernel_8x8.h  hgemm_kernel_pack.cpp  hgemm_kernel_pack.h  hgemm_noTrans.cpp  hgemm_noTrans.h  hgemm_padding_a.cpp  hgemm_padding_a.h  hgemm_padding_b.cpp  hgemm_padding_b.h  hgemm_transA.cpp  hgemm_transA.h  hgemm_transAB.cpp  hgemm_transAB.h  hgemm_transB.cpp  hgemm_transB.h  meson.build
nntrainer/tensor/hgemm/hgemm_kernel/: hgemm_kernel_8x16.cpp
nntrainer/tensor/hgemm/hgemm_padding/: hgemm_padding_a.cpp  hgemm_padding_b.cpp
nntrainer/tensor/igemm/: compute_backend.h  data_util.h  igemm_init.cpp  igemm_init.h  igemm_kernel_sse.cpp  igemm_kernel_sse.h  igemm_packing.cpp  igemm_packing.h  meson.build  my_igemm.cpp  my_igemm.h  my_igemm_test.cpp  scopy_avx.cpp  scopy_avx.h
nntrainer/tensor/matrix_transpose/: matrix_transpose.cpp  matrix_transpose_kernel.cpp  meson.build
nntrainer/tensor/matrix_transpose_avx/: mask_avx.h  matrix_transpose_avx.cpp  matrix_transpose_avx.h  meson.build  transpose_utils.h  transpose_utils_avx.h
nntrainer/tensor/matrix_transpose_neon/: matrix_transpose.h  matrix_transpose_kernel.h  matrix_transpose_kernel_8x8.h  matrix_transpose_kernels_neon.h  matrix_transpose_neon.cpp
nntrainer/tensor/matrix_transpose_neon_benchmark/: mask_neon.h  matrix_transpose_neon.cpp  matrix_transpose_neon.h  transpose_utils.h  transpose_utils_neon.h
nntrainer/tensor/simd_interface/: meson.build
nntrainer/tensor/simd_interface/aarch64/: meson.build  neon_simd.h
nntrainer/tensor/simd_interface/x86/: avx_simd.h  meson.build
nntrainer/tensor/uhgemm/: uhgemm.cpp  uhgemm.h  uhgemm_common.h  uhgemm_noTrans.cpp  uhgemm_noTrans.h  uhgemm_transA.cpp  uhgemm_transA.h  uhgemm_transAB.cpp  uhgemm_transAB.h  uhgemm_transB.cpp  uhgemm_transB.h  uhgemm_util.cpp
nntrainer/tensor/uhgemm/uhgemm_kernel/: meson.build  uhgemm_kernel.h  uhgemm_kernel_1x4.cpp  uhgemm_kernel_1x8.cpp  uhgemm_kernel_4x4.cpp  uhgemm_kernel_4x8.cpp  uhgemm_kernel_8x16.cpp  uhgemm_kernel_8x16_experimental.cpp  uhgemm_kernel_8x8.cpp
nntrainer/tensor/uhgemm/uhgemm_padding/: uhgemm_padding_a.cpp  uhgemm_padding_a.h  uhgemm_padding_b.cpp
(+202 files in other folders)
