matrix_transpose_avx_sources = [
    'matrix_transpose_avx.cpp',
]

matrix_transpose_avx_headers = [

]

foreach s : matrix_transpose_avx_sources
  nntrainer_sources += meson.current_source_dir() / s
endforeach

foreach h : matrix_transpose_avx_headers
  nntrainer_headers += meson.current_source_dir() / h
endforeach
