subdir('common')
nntrainer_inc += include_directories('common')
nntrainer_inc_abs += meson.current_source_dir() / 'common'

subdir('framework')
nntrainer_inc += include_directories('framework')
nntrainer_inc_abs += meson.current_source_dir() / 'framework'

subdir('platform')
nntrainer_inc += include_directories('platform')
nntrainer_inc_abs += meson.current_source_dir() / 'platform'

subdir('session')
nntrainer_inc += include_directories('session')
nntrainer_inc_abs += meson.current_source_dir() / 'session'
